--- a/index.html
+++ b/index.html
@@ -472,9 +472,9 @@
 
   <nav id="mobileMenu" class="mobile-menu"> 
     <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#">Features</a>
-    <a href="#">Contact</a>
+    <a href="#services">Life</a>
+    <a href="#">Of</a>
+    <a href="#">Srish</a>
   </nav>
 
   <nav>
@@ -558,4 +558,5 @@
 
 </body>
 </html>
+
 
