--- a/index.html
+++ b/index.html
@@ -509,16 +509,16 @@
 
   <div class="services-box">
     <div class="service-item">
-      <video src="2.mp4" loop controls muted></video>
+      <video src="2.mp4" autoplay loop controls muted></video>
     </div>
     <div class="service-item">
-      <video src="6.mp4" loop controls></video>
+      <video src="6.mp4" autoplay loop controls></video>
     </div>
     <div class="service-item">
-      <video src="4.mp4" loop controls muted></video>
+      <video src="4.mp4" autoplay loop controls muted></video>
     </div>
     <div class="service-item">
-      <video src="5.mp4" loop controls muted></video>
+      <video src="5.mp4" autoplay loop controls muted></video>
     </div>
   </div>
 </section>
@@ -558,5 +558,6 @@
 
 </body>
 </html>
+
 
 
